# open-mips-interpreter

./: .gitignore  README.md  pyproject.toml  requirements.dev.txt  requirements.test.txt
.github/workflows/: open-mips-interpreter-tests.yml
mips_interpreter/: main.py  main_test.py
